# senseglove_r1_ros

./: .gitignore  readme.md  requirements.txt
docs/: releases.md  robot-hand-mapper.md  setup-initial.md  setup-wsl.md
r1_bringup/: CMakeLists.txt  package.xml
r1_bringup/launch/: r1.launch.py
r1_interaction/: package.xml  setup.cfg  setup.py
r1_interaction/r1_interaction/configs/: __init__.py
r1_interaction/r1_interaction/configs/robot_hand_mapper/: dg5f_pinch_config_left.py  dg5f_pinch_config_right.py  seed.py
r1_interaction/r1_interaction/haptics/: butter_c.py  force_slider.py
r1_interaction/r1_interaction/main/: r1_manager.py  r1_rhm.py
r1_msgs/: CMakeLists.txt  package.xml
r1_msgs/msg/: R1ForceCommands.msg  R1GloveState.msg
r1_msgs/srv/: SetRHMConfig.srv
