<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>r1_bringup</name>
    <version>0.0.1</version>
    <description>Launch files for R1 </description>
    <maintainer email="akshay@senseglove.com">Akshay Radhamohan Menon</maintainer>
    <license>MIT</license>

    <!-- Build tool -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- runtime dependencies -->
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>r1_interaction</exec_depend>
    <exec_depend>r1_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

